--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,12 @@
 }
 
 .calculator {
-    width: 100%;
+    width: 300px;
+    margin: 80px auto;
 }
 
-.display {
+.calculator .display {
+    font-size: 18px;
     background: #eee;
     color: #333;
     font-family: Courier New, Courier, monospace;
@@ -30,7 +32,8 @@
     border-radius: 5px;
 }
 
-.btn {
+.calculator .btn {
+    font-size: 18px;
     padding: 1em;
     width: 100%;
     height: 100%;
